--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,28 +2,27 @@ name: Update README with Bot Status
 
 on:
   schedule:
-    - cron: "*/2 * * * *" # Runs every 2 minutes
-  workflow_dispatch: # Allows manual triggering of the workflow
+    - cron: "*/2 * * * *"
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Step 2: Fetch Bot Status
       - name: Fetch Bot Status
         id: get_status
         run: |
-          # Replace with your bot's status endpoint
           STATUS=$(curl -s http://54.39.8.32:25616/bot-status || echo "offline")
           echo "Fetched Bot Status: $STATUS"
           echo "status=$STATUS" >> $GITHUB_ENV
 
-      # Step 3: Update the README file
       - name: Update README
         run: |
           echo "Before Update:"
@@ -33,11 +32,12 @@ jobs:
           echo "After Update:"
           cat README.md
 
-      # Step 4: Commit and Push Changes
       - name: Commit and Push Changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions"
+          git checkout main
+          git pull origin main
           git add README.md
           git commit -m "Update bot status: $status" || echo "No changes to commit"
-          git push
+          git push --force
